[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/utils/wounded_marker/wounded_marker_ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/utils/wounded_marker/wounded_marker.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]

[node name="wounded_marker" type="Sprite3D"]
cast_shadow = 0
billboard = 1
double_sided = false
no_depth_test = true
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 100, 100 )
transparent_bg = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="wounded_marker_ui" parent="Viewport" instance=ExtResource( 1 )]

[node name="revive_area" type="Area" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="revive_area"]
shape = SubResource( 1 )

[node name="revive_timer" type="Timer" parent="."]
one_shot = true

[node name="expired_time" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="revive_timer" to="." method="_on_revive_timer_timeout"]
[connection signal="timeout" from="expired_time" to="." method="_on_expired_time_timeout"]
